--- a/global-config.yaml
+++ b/global-config.yaml
@@ -14,7 +14,7 @@ snsTopics:
   topics:
     - name: Security
       emailAddresses:
-        - <security-notifications>@example.com  <----- UPDATE EMAIL ADDRESS
+        - dearie+lza_notifications@fastmail.com
 controlTower:
   enable: true
   landingZone:
