--- a/accounts-config.yaml
+++ b/accounts-config.yaml
@@ -20,29 +20,29 @@ mandatoryAccounts:
       key does not need to match the AWS account name.
     email: dearie+lza_audit@fastmail.com
     organizationalUnit: Security
-# workloadAccounts:
-#   - name: LogArchiveGC # referred to as LogArchive in the GovCloud account-config.yaml
-#     description: The log archive account for GovCloud.
-#     email: <govCloud-log-archive-email@example.com> <----- UPDATE EMAIL ADDRESS
-#     # this OU has all GovCloud accounts.
-#     # OU was created from Control Tower
-#     # in organization-config.yaml this OU was added.
-#     organizationalUnit: GovCloud
-#     # enableGovCloud is a one-time non-reversible option
-#     # which only works with creation of new accounts
-#     enableGovCloud: true
-#   - name: AuditGC # referred to as Audit in the GovCloud account-config.yaml
-#     description: The security audit account (also referred to as the audit account) for GovCloud.
-#     email: <govCloud-audit-email@example.com> <----- UPDATE EMAIL ADDRESS
-#     organizationalUnit: GovCloud
-#     enableGovCloud: true
-#   - name: SharedServicesGC # referred to as SharedServices in the GovCloud account-config.yaml
-#     description: Shared services account for GovCloud.
-#     email: <govCloud-shared-services-email@example.com> <----- UPDATE EMAIL ADDRESS
-#     organizationalUnit: GovCloud
-#     enableGovCloud: true
-#   - name: NetworkGC # referred to as Network in the GovCloud account-config.yaml
-#     description: Network account for GovCloud.
-#     email: <govCloud-network-email@example.com> <----- UPDATE EMAIL ADDRESS
-#     organizationalUnit: GovCloud
-#     enableGovCloud: true
+workloadAccounts:
+  - name: LogArchiveGC # referred to as LogArchive in the GovCloud account-config.yaml
+    description: The log archive account for GovCloud.
+    email: dearie+lza_logging_gc@fastmail.com
+    # this OU has all GovCloud accounts.
+    # OU was created from Control Tower
+    # in organization-config.yaml this OU was added.
+    organizationalUnit: GovCloud
+    # enableGovCloud is a one-time non-reversible option
+    # which only works with creation of new accounts
+    enableGovCloud: true
+  - name: AuditGC # referred to as Audit in the GovCloud account-config.yaml
+    description: The security audit account (also referred to as the audit account) for GovCloud.
+    email: dearie+lza_audit_gc@fastmail.com
+    organizationalUnit: GovCloud
+    enableGovCloud: true
+  # - name: SharedServicesGC # referred to as SharedServices in the GovCloud account-config.yaml
+  #   description: Shared services account for GovCloud.
+  #   email: dearie+lza_services_gc
+  #   organizationalUnit: GovCloud
+  #   enableGovCloud: true
+  # - name: NetworkGC # referred to as Network in the GovCloud account-config.yaml
+  #   description: Network account for GovCloud.
+  #   email: <govCloud-network-email@example.com> <----- UPDATE EMAIL ADDRESS
+  #   organizationalUnit: GovCloud
+  #   enableGovCloud: true
